# mp1-presentation

./: .gitignore  README.md  alternative_curve_coordinates.csv  application.html  kerr.html  mp1_pres.html  mp1_presentation.html  neuron.html  pyproject.toml  smoothed_coordinates.csv  sweeping_curve_coordinates.csv  thanks.html  trans_modulation.html
html/: alloptical_modulation.html  exp_diagram.html  exp_setup.html  mod_types.html  modulation_response.html  motiv.html  motivation.html  mp1_presentation.html  mrr_operation.html  mrr_transmission_modulation.html  opening.html  operation.html  ring_modulators.html
html/slides/: AllOpticalModulation.json  ApplicationPart2.json  ApplicationPart3.json  ApplicationPart6.json  ApplicationPart7.json  ExperimentDiagram.json  MicroringTransmissionModulation.json  MotivationSlide.json  Neuron.json  RingModulators.json  ThankYou.json
mp1-presentation/: characterisation.py  drawing_board.py  manimgl_test.py  power_response_graph.py  presentation.py  ring_animations.py  slides.py  try.py
mp1-presentation/measurements/: OSA_Output 1 (1).ipynb  laser_sweep.py  osa_output.py  rigol_hdo4204_oscilloscope.py  try.py  wavelength_sweep.py
mp1-presentation/power_response_graphs/: akima_curve_coordinates.csv  flatter_curve_coordinates.csv
slides/: ApplicationPart1.json  ApplicationPart4.json  ApplicationPart5.json  CombinedMRROperation.json  Contents.json  FrequencyModulationResponse.json  KerrEquations.json  MRROperation.json  ModulationResponse.json  ModulationTypes.json  Motivation.json  OpeningTitle.json
(+662 files in other folders)
